Added API tests. Updated swagger file. Updated comments in API.py
