# cta_refinement/api.py
@@ -15,7 +15,7 @@ def get_blueprint():
     return REFINER_API
 
 @REFINER_API.route('/api/cta/<string:cta_name>', methods=['GET','POST','PUT','DELETE'])
-def add_cta(cta_name):  # noqa: E501
+def cta_functions(cta_name):  # noqa: E501
     """Adds/Removes/Updates/Gets a CTA from the session
 
     Adds/Removes/Updates/Gets a CTA to the session # noqa: E501
@@ -111,7 +111,7 @@ def get_samples():  # noqa: E501
     Returns a list of available sample scripts which can be passed as a parameter to retrieve specific sample  # noqa: E501
 
 
-    :rtype: None
+    :rtype: str
     """
     try:
         examples = []
@@ -125,9 +125,9 @@ def get_samples():  # noqa: E501
 def refine_ctas(cta_name1,cta_name2):  # noqa: E501
     """Gets refinements between two CTAs.
 
-    By passing in the appropriate options, you can search for ctas which are currently defined in the system  # noqa: E501
+    By passing in the appropriate options, you can search for ctas which are currently defined in the session  # noqa: E501
 
-    :param cta_name: gets refinements between two ctas
+    :param cta_name: the name of the CTAs that are to be refined
     :type cta_name: str
 
     :rtype: Refinement
@@ -138,12 +138,8 @@ def refine_ctas(cta_name1,cta_name2):  # noqa: E501
 
         script = ("Cta " + cta_name1 + " = " + str(cta1["CTA"]) + "; Cta " + cta_name2 + " = "
         + str(cta2["CTA"]) + ";" + cta_name1 + " refines? " + cta_name2 + ";")
-        #return str(script)
-	session.update({"script":str(script)})
-	tf = tempfile.NamedTemporaryFile().name
-	session.modified = True
-	scriptResponse = webScriptRefinementChecker(str(script),tf,"png")
 
+	scriptResponse = web_script_refinement_checker(str(script),"none","png")
         return jsonify(result=scriptResponse), 200
     except:
         return handle_404_error(404)
@@ -159,7 +155,7 @@ def search_cta(skip=None, limit=None):  # noqa: E501
     :param limit: maximum number of records to return
     :type limit: int
 
-    :rtype: Dictionary{Name of CTA : Definition of CTA}
+    :rtype: list
     """
 
     try:
@@ -168,8 +164,10 @@ def search_cta(skip=None, limit=None):  # noqa: E501
         return handle_404_error(404)
 
 def parse_ctas(script):
-    """ Parses a script and extracts CTAs from it. 
-        Appends the 'session' variable with a 'CTA List' dictionary.
+    """Parses a script and extracts CTAs from it.
+
+       By passing in a script, it is parsed and CTAs defined are added to the session's list
+       of CTAs.
 
         :param script: Cta refinement script
         :type script: string
@@ -197,11 +195,13 @@ def parse_ctas(script):
 
 
 def end_of_cta(str,str2):
-    """
-    Signifies the end of a CTA object within a script
+    """Signifies the end of a CTA object within a script.
+
+       Idenitifies the the tokens that symbolise the end of a CTA definition.
 
     :param str: String to test for object end tokens
     :type str: string
+
     :param str2: String to test for object end tokens
     :type str2: string
 
@@ -210,8 +210,9 @@ def end_of_cta(str,str2):
     return str.find("};") != -1 or str[-1].find("}") != -1 and str2[0].find(";") != -1
 
 def reformat_script(script):
-    """
-    Reformats script for compatibility with 'parse_cta' function, and returns the new version
+    """Reformats script for compatibility with 'parse_cta' function.
+
+       By reformatting the script, it can be parsed without errors by 'parse_cta'.
 
     :param script: CTA refinement script
     :type script: string
@@ -235,6 +236,16 @@ def reformat_script(script):
     return rf_script
 
 def cta_present(name):
+    """Looks for a specific CTA within the session.
+
+       The name if the target CTA is entered and the function returns
+       whether a CTA with a matching name exists.
+
+    :param name: Name of CTA
+    :type name: string
+
+    :rtype: boolean
+    """
     if not session.has_key("CTA List"):
         return False
     c = -1
@@ -245,6 +256,18 @@ def cta_present(name):
 
 
 def append_cta(name, definition):
+    """Adds given CTA to session's CTA List.
+
+       A CTA object is created, and added it to the CTA List
+       within the session.
+
+    :param name: Name of CTA
+    :type name: string
+    :param definition: Definition of the CTA
+    :type definition: string
+
+    :rtype: none
+    """
     cta_obj = {"name": name, "CTA": definition}
     if session.has_key("CTA List"):
         session["CTA List"].append(cta_obj)
@@ -253,6 +276,16 @@ def append_cta(name, definition):
         session["CTA List"] = [cta_obj]
 
 def get_cta(name):
+    """Retrieves the given CTA from the session.
+
+       Searches list of CTA's in session and returns a CTA
+       if it has a matching name.
+
+    :param name: Name of CTA
+    :type name: string
+
+    :rtype: dict
+    """
     if session.has_key("CTA List"):
         for cta in session["CTA List"]:
             if cta["name"] == name:
